more view feedback buttons

--- a/src/frontend/parlai-app/src/app/upload/upload.component.html
+++ b/src/frontend/parlai-app/src/app/upload/upload.component.html
@@ -20,6 +20,15 @@
                         <button mat-raised-button color="accent" (click)="goQuestionCompose(doc)" *ngIf="i===1"
                                 matBadge="3" matBadgePosition="after" style="margin-left: 15px;"
                         >View Feedback</button>
+                         <button mat-raised-button color="accent" disabled="true" (click)="goQuestionCompose(doc)" *ngIf="i===2"
+                      style="margin-left: 15px;"
+               >View Feedback</button>
+                        <button mat-raised-button color="accent" disabled="true" (click)="goQuestionCompose(doc)" *ngIf="i===3"
+                             style="margin-left: 15px;"
+                      >View Feedback</button>
+                      <button mat-raised-button color="accent" disabled="true" (click)="goQuestionCompose(doc)" *ngIf="i===4"
+                             style="margin-left: 15px;"
+                      >View Feedback</button>
                     </mat-card-actions>
                 </mat-card>
             </li>
