--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
@@ -16,7 +16,7 @@
             <div class="scrollable">
 
                 <ul class="card question-card">
-                    <li *ngFor="let question of questions; index as i" [class.selected]="selectedQuestion === question" (click)="questionSelected(question)">
+                    <li *ngFor="let question of questions; index as i" [class.selected]="selectedQuestion === question" (click)="questionSelected(question, i)">
                         <mat-card class="example-card">
                             <mat-card-header>
                                 <mat-card-title style="font-weight: 400;font-size: 14px;">{{i+1}}. {{question.content}}</mat-card-title>
@@ -33,7 +33,7 @@
 
         <div class="column" *ngIf="selectedQuestion">
             <mat-toolbar class="mat-elevation-z6" color="primary">
-                <span>Relevant Information - Question {{selectedQuestion.id}}</span>
+                <span>Relevant Information - Question {{selectedIndex ? selectedIndex+1 : ''}}</span>
             </mat-toolbar>
 
             <div class="empty-space"></div>
