--- a/src/frontend/parlai-app/src/app/contact-peers/contact-peers.component.html
+++ b/src/frontend/parlai-app/src/app/contact-peers/contact-peers.component.html
@@ -1,3 +1,4 @@
+<p *ngIf="!users?.length">No experts have been found on the current subject.</p>
 <ul class="card">
   <li *ngFor="let user of users">
     <mat-card class="example-card">
