--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.scss
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.scss
@@ -75,3 +75,9 @@ span {
 .information .mat-chip {
     cursor: pointer;
 }
+
+.center {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+  }
