--- a/src/frontend/parlai-app/src/app/start/start.component.html
+++ b/src/frontend/parlai-app/src/app/start/start.component.html
@@ -2,22 +2,22 @@
 
 <div class="container">
   <div style="text-align:center" class="mat-typography">
-    <h1 style="margin-top:50px;">
+    <!-- <h1 style="margin-top:50px;">
         {{ title }}
-    </h1>
+    </h1> -->
 
-    <h2>Answering parliamentary questions with AI</h2>
+    <h2>Kies een gebruiker om in te loggen</h2>
     <ul class="card">
       <li *ngFor="let user of users">
         <mat-card class="example-card">
           <mat-card-header>
             <mat-card-title style="font-weight: 400; font-size: 14px;">{{user.real_name}}</mat-card-title>
-            <mat-card-subtitle>Email: {{user.email}}</mat-card-subtitle>
-            <mat-card-subtitle>Phone: {{user.phone}}</mat-card-subtitle>
+            <mat-card-subtitle>E-mail: {{user.email}}</mat-card-subtitle>
+            <mat-card-subtitle>Telefoon: {{user.phone}}</mat-card-subtitle>
             <mat-card-subtitle style="word-wrap: break-word;">Expertise: {{user.spec_keywords}}</mat-card-subtitle>
           </mat-card-header>
           <mat-card-actions>
-            <button class="login-button" mat-raised-button color="accent" (click)="userSelected(user)">Login</button>
+            <button class="login-button" mat-raised-button color="accent" (click)="userSelected(user)">Inloggen</button>
           </mat-card-actions>
         </mat-card>
       </li>
