--- a/src/frontend/parlai-app/src/app/upload/upload.component.html
+++ b/src/frontend/parlai-app/src/app/upload/upload.component.html
@@ -2,8 +2,8 @@
 
 <div class="container">
     <div style="text-align:center" class="mat-typography">
-        <h1 style="margin-top:75px;"> Hello {{ selectedUser.real_name }}, </h1>
-        <h2 style="margin-top:20px;"> Here's an overview of the questions assigned to you: </h2>
+        <h1 style="margin-top:75px;"> Hallo {{ selectedUser.real_name }}, </h1>
+        <h2 style="margin-top:20px;"> De volgende vragen zijn aan jou toegewezen: </h2>
 
         <ul class="card">
             <li *ngFor="let doc of questionDocuments;let i = index;">
@@ -13,22 +13,22 @@
                         <mat-card-subtitle>{{doc.keywords.toLowerCase()}}</mat-card-subtitle>
                     </mat-card-header>
                     <mat-card-actions>
-                        <button mat-raised-button color="accent" (click)="answerClicked(doc)">Answer</button>
+                        <button mat-raised-button color="accent" (click)="answerClicked(doc)">Beantwoorden</button>
                       <button mat-raised-button color="accent" disabled="true" (click)="goQuestionCompose(doc)" *ngIf="i===0"
                              style="margin-left: 15px;"
-                      >View Feedback</button>
+                      >Bekijk feedback</button>
                         <button mat-raised-button color="accent" (click)="goQuestionCompose(doc)" *ngIf="i===1"
                                 matBadge="3" matBadgePosition="after" style="margin-left: 15px;"
-                        >View Feedback</button>
+                        >Bekijk feedback</button>
                          <button mat-raised-button color="accent" disabled="true" (click)="goQuestionCompose(doc)" *ngIf="i===2"
                       style="margin-left: 15px;"
-               >View Feedback</button>
+               >Bekijk feedback</button>
                         <button mat-raised-button color="accent" disabled="true" (click)="goQuestionCompose(doc)" *ngIf="i===3"
                              style="margin-left: 15px;"
-                      >View Feedback</button>
+                      >Bekijk feedback</button>
                       <button mat-raised-button color="accent" disabled="true" (click)="goQuestionCompose(doc)" *ngIf="i===4"
                              style="margin-left: 15px;"
-                      >View Feedback</button>
+                      >Bekijk feedback</button>
                     </mat-card-actions>
                 </mat-card>
             </li>
