--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.scss
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.scss
@@ -72,7 +72,11 @@ span {
     margin-bottom: 15px;
 }
 
-.information .mat-chip {
+.entities .mat-chip {
+    cursor: default;
+}
+
+.keywords .mat-chip {
     cursor: pointer;
 }
 
