--- a/src/frontend/parlai-app/src/app/end-page/end-page.component.html
+++ b/src/frontend/parlai-app/src/app/end-page/end-page.component.html
@@ -4,7 +4,7 @@
     {{ title }}
   </h1>
   <div>
-      <button mat-raised-button color="accent" class="" [routerLink]="['/start']">Back to Homepage
+      <button mat-raised-button color="accent" class="" [routerLink]="['/start']">Terug naar de beginpagina
       </button>
     </div>
 </div>
