--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
@@ -23,7 +23,7 @@
                                 <mat-card-subtitle>{{question.topic}}</mat-card-subtitle>
                             </mat-card-header>
                             <mat-form-field>
-                                <textarea matInput placeholder="Answer" [(ngModel)]='question.answer'></textarea>
+                                <textarea matInput placeholder="Antwoord" [(ngModel)]='question.answer'></textarea>
                             </mat-form-field>
                         </mat-card>
                     </li>
@@ -57,7 +57,7 @@
                                     <mat-icon matChipRemove (click)="entityRemoveClicked(ent)">cancel</mat-icon>
                                 </mat-chip>
                             </div>
-                            
+
                         </mat-chip-list>
                     </div>
 
