--- a/src/frontend/parlai-app/src/app/question-submitted/question-submitted.component.html
+++ b/src/frontend/parlai-app/src/app/question-submitted/question-submitted.component.html
@@ -2,11 +2,11 @@
 
 <div style="text-align:center" class="mat-typography">
     <h1 style="margin-top:50px;">
-        Answer was successfully submitted
+        Uw antwoorden zijn verzonden
     </h1>
-    <h2>Start entering a new set of questions?</h2>
-    <button mat-raised-button color="accent" [routerLink]="['/upload']">Yes</button>
-    <button mat-raised-button color="primary" [routerLink]="['/endpage']">No</button>
+    <h2>Wilt u meer vragen beantwoorden?</h2>
+    <button mat-raised-button color="accent" [routerLink]="['/upload']">Ja</button>
+    <button mat-raised-button color="primary" [routerLink]="['/endpage']">Nee</button>
 </div>
 
 <app-scroll-top></app-scroll-top>
