--- a/src/frontend/parlai-app/src/app/upload/upload.component.html
+++ b/src/frontend/parlai-app/src/app/upload/upload.component.html
@@ -14,21 +14,16 @@
                     </mat-card-header>
                     <mat-card-actions>
                         <button mat-raised-button color="accent" (click)="answerClicked(doc)">Beantwoorden</button>
-                      <button mat-raised-button color="accent" disabled="true" (click)="goQuestionCompose(doc)" *ngIf="i===0"
-                             style="margin-left: 15px;"
-                      >Bekijk feedback</button>
+                        <button mat-raised-button color="accent" disabled="false" (click)="goQuestionCompose(doc)" *ngIf="i===0"
+                            style="margin-left: 15px;">Bekijk feedback</button>
                         <button mat-raised-button color="accent" (click)="goQuestionCompose(doc)" *ngIf="i===1"
-                                matBadge="3" matBadgePosition="after" style="margin-left: 15px;"
-                        >Bekijk feedback</button>
-                         <button mat-raised-button color="accent" disabled="true" (click)="goQuestionCompose(doc)" *ngIf="i===2"
-                      style="margin-left: 15px;"
-               >Bekijk feedback</button>
-                        <button mat-raised-button color="accent" disabled="true" (click)="goQuestionCompose(doc)" *ngIf="i===3"
-                             style="margin-left: 15px;"
-                      >Bekijk feedback</button>
-                      <button mat-raised-button color="accent" disabled="true" (click)="goQuestionCompose(doc)" *ngIf="i===4"
-                             style="margin-left: 15px;"
-                      >Bekijk feedback</button>
+                            matBadge="2" matBadgePosition="after" style="margin-left: 15px;">Bekijk feedback</button>
+                        <button mat-raised-button color="accent" disabled="false" (click)="goQuestionCompose(doc)" *ngIf="i===2"
+                            style="margin-left: 15px;">Bekijk feedback</button>
+                        <button mat-raised-button color="accent" disabled="false" (click)="goQuestionCompose(doc)" *ngIf="i===3"
+                            style="margin-left: 15px;">Bekijk feedback</button>
+                        <button mat-raised-button color="accent" disabled="false" (click)="goQuestionCompose(doc)" *ngIf="i===4"
+                            style="margin-left: 15px;">Bekijk feedback</button>
                     </mat-card-actions>
                 </mat-card>
             </li>
